# LydianEngine

./: .env.example  .gitignore  README.md  docker-compose.yml
ingestion/: Dockerfile  go.mod
ingestion/cmd/: main.go
ingestion/internal/buffer/: ring_buffer.go
ingestion/internal/dispatcher/: dispatcher.go
ingestion/internal/feed/: client.go  mock_client.go  rss_client.go
ingestion/internal/models/: news_item.go
ingestion/testdata/: mock_news_feed.json
sentinel/: .env.example  Dockerfile  pyproject.toml  requirements.txt
sentinel/lydian/: main.py
sentinel/lydian/agents/: filter_agent.py  graph.py  historian_agent.py
sentinel/lydian/core/: config.py
sentinel/lydian/data/: benchmark_data_50.json  market_history.csv
sentinel/lydian/schemas/: models.py
sentinel/lydian/storage/: seed.py  vector_store.py
sentinel/scripts/: benchmark.py
sentinel/tests/: __init__.py  test_api.py  test_models.py
