[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lydian"
version = "1.0.0"
description = "Real-time agentic financial audit engine"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["lydian*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
